Bug 104011 - FORMCONTROLS. Dialog editor causes crash with Fatal Error when adding a Combo Box from FormControls toolbar.
Summary: FORMCONTROLS. Dialog editor causes crash with Fatal Error when adding a Combo...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: BASIC (show other bugs)
Version:
(earliest affected)
3.5.0 release
Hardware: All All
: medium major
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.5.4 target:7.6.0
Keywords:
Depends on:
Blocks: Crash
  Show dependency treegraph
 
Reported: 2016-11-18 15:12 UTC by Peter Toye
Modified: 2023-04-19 11:57 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Offending spreadsheet (29.20 KB, application/vnd.oasis.opendocument.spreadsheet)
2016-11-18 15:12 UTC, Peter Toye
Details
Screenshot of error (569.09 KB, image/png)
2016-11-18 15:14 UTC, Peter Toye
Details
My form dialogs are greyed out. Do I miss something? (43.43 KB, image/png)
2021-04-06 09:59 UTC, Andreas Heinisch
Details
Dialogs within documents (54.39 KB, image/png)
2021-04-07 09:12 UTC, Andreas Heinisch
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Peter Toye 2016-11-18 15:12:16 UTC
Created attachment 128841 [details]
Offending spreadsheet

Running Windows 7 SP1. LO 5.2.3.3 32-bit. Java 1.8.0_111.

Go to Tools|Macros|Organise Dialogs. Select the spreadsheet Standard module. click "new" and give the dialog a name. Then click "Edit", select the Combobox icon, put the cursor in the dialog frame and click. Instant crash. See the screenshot for what happens.

Also happens with a ListBox control, but not with a numeric field control. I ran out of time at that point.
Comment 1 Peter Toye 2016-11-18 15:14:07 UTC
Created attachment 128842 [details]
Screenshot of error

Didn't attach this by mistake.
Comment 2 Katarina Behrens (Inactive) 2016-11-18 18:34:23 UTC
In self-made 64bit Linux build as of today, I couldn't reproduce. Windows specific?
Comment 3 Aron Budea 2016-11-19 04:47:09 UTC
I couldn't reproduce it, either (5.2.3.3 / Windows 7).
Could you give it a try with a fresh user profile, after backing up the current one?
Comment 4 Peter Toye 2016-11-19 10:09:27 UTC
(In reply to Aron Budea from comment #3)
> I couldn't reproduce it, either (5.2.3.3 / Windows 7).
> Could you give it a try with a fresh user profile, after backing up the
> current one?

I renamed the use profile directory - LibO made a new one, but the crash still happens.
Comment 5 Peter Toye 2016-11-20 18:30:11 UTC
Oops - I've found this was my error. There are two combo boxes on the toolbar - the one on the left (help text Combo Box) works OK (at least it doesn't crash - not had any time to take it further). The one on the right which has help text (Form Combo Box) crashes. I'd seen the right-hand one first, and assumed that "Form" was a verb. As it is, I don't know what it means.

I still think that _anything_ you do which causes a crash, especially one with no meaningful error message, is a bug.
Comment 6 Aron Budea 2016-11-20 23:29:24 UTC
Ok, reproduced now. Previously I tried using Insert Controls dropdown on Dialog toolbar, which only had one Combo Box item, and that worked correctly.

What doesn't work, and causes the error is Form Combo Box on FormControls toolbar. Reproduced with as early as v3.5.0.3.
You're right, this is definitely a bug. Thanks for the clarification!
Comment 7 Katarina Behrens (Inactive) 2016-11-21 18:19:27 UTC
I still can't see the bug on Linux, changing platform to Windows
Comment 8 Aron Budea 2016-11-22 01:57:18 UTC
Hm, I tried now with 5.2.3.3 and a 5.3 daily build / Ubuntu 16.04 (VM), and the reproduction steps locked up the whole GUI, I had to switch to console, kill soffice, and then the GUI started working again.
I wonder what the reproducibility depends on in Linux...
Comment 9 QA Administrators 2017-11-23 14:54:54 UTC Comment hidden (obsolete)
Comment 10 Peter Toye 2017-11-23 15:49:42 UTC
Still there in LO 5.3.7.2.
Comment 11 Peter Toye 2017-11-23 15:51:49 UTC
Sorry - forgot to add:


Version: 5.3.7.2 (x64)
Build ID: 6b8ed514a9f8b44d37a1b96673cbbdd077e24059
CPU Threads: 4; OS Version: Windows 6.1; UI Render: default; Layout Engine: new; 
Locale: en-GB (en_GB); Calc: group
Comment 12 QA Administrators 2018-11-24 03:44:15 UTC Comment hidden (obsolete)
Comment 13 Peter Toye 2018-11-25 12:05:15 UTC
Still happens in 6.0.2
Comment 14 Xisco Faulí 2018-11-26 09:59:36 UTC
(In reply to Peter Toye from comment #13)
> Still happens in 6.0.2

Hii Peter Toye,
I can't reproduce it in

Versión: 6.1.3.2
Id. de compilación: 86daf60bf00efa86ad547e59e09d6bb77c699acb
Subprocs. CPU: 1; SO: Windows 6.1; Repres. IU: predet.; 
Configuración regional: es-ES (es_ES); Calc: group threaded

Could you please try to reproduce it with the latest version of LibreOffice
from https://www.libreoffice.org/download/libreoffice-fresh/ ?
I have set the bug's status to 'NEEDINFO'. Please change it back to
'UNCONFIRMED' if the bug is still present in the latest version.
Comment 15 Peter Toye 2018-11-26 12:17:49 UTC
It's still crashing, but slightly differently. Try the following:

Load the spreadsheet. 
Go to Tools|Macros|Organise Dialogs
Select the TestBug dialog from the spreadsheet and click 'Edit'
Click on the "Form ComboBox" icon (NOT the ordinary ComboBox icon) in the dialog editor. 
Move the cursor into the editing area - a cross will appear.
Click once and a 'Fatal error' window appears saying "Cell not found".

Version: 6.1.3.2 (x64)
Build ID: 86daf60bf00efa86ad547e59e09d6bb77c699acb
CPU threads: 4; OS: Windows 6.1; UI render: default; 
Locale: en-GB (en_GB); Calc: group threaded

Hope this helps.
Comment 16 Xisco Faulí 2019-05-30 11:17:52 UTC
hello Peter Toye,
A new major release of LibreOffice is available since this bug was reported.
Could you please try to reproduce it with the latest version of LibreOffice
from https://www.libreoffice.org/download/libreoffice-fresh/ ?
I have set the bug's status to 'NEEDINFO'. Please change it back to
'UNCONFIRMED' if the bug is still present in the latest version.
Comment 17 Peter Toye 2019-06-01 11:06:35 UTC
Thanks Xisco Fauli.

There seem to be three new versions of LO on the website: an experimental 6.3, an early adopter 6.2 and a stable 6.1.6. Which one do you mean please? I'm not that keen on "early adopter" versions - I spent far too much of my professional life debugging other people's code...
Comment 18 Xisco Faulí 2019-06-01 15:27:37 UTC
(In reply to Peter Toye from comment #17)
> Thanks Xisco Fauli.
> 
> There seem to be three new versions of LO on the website: an experimental
> 6.3, an early adopter 6.2 and a stable 6.1.6. Which one do you mean please?
> I'm not that keen on "early adopter" versions - I spent far too much of my
> professional life debugging other people's code...

Then try with 6.1.6 or wait for 6.2.5 to be released in a couple of weeks. thanks
Comment 19 Peter Toye 2019-06-02 13:59:08 UTC
Tried with 6.1.6 Same issue. Is 6.2.5 going to be designated as stable? I'm not sure how easy it is to revert LO to an earlier version.
Comment 20 Buovjaga 2019-08-19 16:47:15 UTC
(In reply to Peter Toye from comment #15)
> It's still crashing, but slightly differently. Try the following:
> 
> Load the spreadsheet. 
> Go to Tools|Macros|Organise Dialogs
> Select the TestBug dialog from the spreadsheet and click 'Edit'
> Click on the "Form ComboBox" icon (NOT the ordinary ComboBox icon) in the
> dialog editor. 
> Move the cursor into the editing area - a cross will appear.
> Click once and a 'Fatal error' window appears saying "Cell not found".

I repro with these steps.
Unable to get a backtrace

Arch Linux 64-bit
Version: 6.4.0.0.alpha0+
Build ID: b9a776837462eeb6d50d0decc42604c0c3008eb1
CPU threads: 8; OS: Linux 5.2; UI render: default; VCL: kf5; 
Locale: fi-FI (fi_FI.UTF-8); UI-Language: en-US
Calc: threaded
Built on 11 August 2019
Comment 22 Peter Toye 2021-02-03 12:59:47 UTC
(In reply to Buovjaga from comment #20)
> (In reply to Peter Toye from comment #15)
> > It's still crashing, but slightly differently. Try the following:
> > 
> > Load the spreadsheet. 
> > Go to Tools|Macros|Organise Dialogs
> > Select the TestBug dialog from the spreadsheet and click 'Edit'
> > Click on the "Form ComboBox" icon (NOT the ordinary ComboBox icon) in the
> > dialog editor. 
> > Move the cursor into the editing area - a cross will appear.
> > Click once and a 'Fatal error' window appears saying "Cell not found".
> 
> I repro with these steps.
> Unable to get a backtrace
> 
> Arch Linux 64-bit
> Version: 6.4.0.0.alpha0+
> Build ID: b9a776837462eeb6d50d0decc42604c0c3008eb1
> CPU threads: 8; OS: Linux 5.2; UI render: default; VCL: kf5; 
> Locale: fi-FI (fi_FI.UTF-8); UI-Language: en-US
> Calc: threaded
> Built on 11 August 2019

I've just tried it on version 7.0.3.1 and get the same result. So the error message has changed a bit, but it's still crashing.
Comment 23 John 2021-03-28 21:30:22 UTC
This appears to be closely related to tdf#90361

OCellListSource::initialize() expects a named argument "CellRange" but it's being passed an argument called "BoundCell" (which appears to have been created in 90361).
Comment 24 Andreas Heinisch 2021-04-06 09:59:35 UTC
Created attachment 170975 [details]
My form dialogs are greyed out. Do I miss something?
Comment 25 Buovjaga 2021-04-06 12:57:21 UTC
(In reply to Andreas Heinisch from comment #24)
> Created attachment 170975 [details]
> My form dialogs are greyed out. Do I miss something?

Only diff I see is that you created the dialog outside the document. I created it inside the document and the buttons are not greyed out (and it still crashes)

Arch Linux 64-bit
Version: 7.2.0.0.alpha0+ / LibreOffice Community
Build ID: 18cc01b63996f81b284e3bc827d1be7f3da8983a
CPU threads: 8; OS: Linux 5.11; UI render: default; VCL: kf5
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded
Built on 4 April 2021
Comment 26 Andreas Heinisch 2021-04-07 09:12:04 UTC
Created attachment 170997 [details]
Dialogs within documents

When I create the dialog within a writer document, the buttons are greyed out. If I create it in a calc document, I can add them without any problems in my local build, even if I only click in the dialog. Previously, I could reproduce the error.

So I could not reproduce the error in:
Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: bcdd9145d487d5b162a360f3adb1eaf7250c18c9
CPU threads: 6; OS: Windows 10.0 Build 19042; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-US
Calc: CL
Comment 27 Peter Toye 2021-04-07 11:58:30 UTC
(In reply to Buovjaga from comment #25)
> (In reply to Andreas Heinisch from comment #24)
> > Created attachment 170975 [details]
> > My form dialogs are greyed out. Do I miss something?
> 
> Only diff I see is that you created the dialog outside the document. I
> created it inside the document and the buttons are not greyed out (and it
> still crashes)
> 
> Arch Linux 64-bit
> Version: 7.2.0.0.alpha0+ / LibreOffice Community
> Build ID: 18cc01b63996f81b284e3bc827d1be7f3da8983a
> CPU threads: 8; OS: Linux 5.11; UI render: default; VCL: kf5
> Locale: fi-FI (fi_FI.UTF-8); UI: en-US
> Calc: threaded
> Built on 4 April 2021

I can't quote for 7.2.0 as I dn't use unstable versions, but the bug is still there in 7.0.5.

Peter
Comment 28 Buovjaga 2021-04-07 15:45:12 UTC
(In reply to Andreas Heinisch from comment #26)
> Created attachment 170997 [details]
> Dialogs within documents
> 
> When I create the dialog within a writer document, the buttons are greyed
> out. If I create it in a calc document, I can add them without any problems
> in my local build, even if I only click in the dialog. Previously, I could
> reproduce the error.

Just to confirm: you are using attachment 128841 [details], right?
Comment 29 Andreas Heinisch 2021-04-07 15:51:41 UTC
Can not reproduce it in the mentioned attachment either with:

Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: bcdd9145d487d5b162a360f3adb1eaf7250c18c9
CPU threads: 6; OS: Windows 10.0 Build 19042; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-US
Calc: CL
Comment 30 Commit Notification 2023-04-19 10:06:48 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/c2c3d04478f0228f4914cd78f84113f939dcf325

Resolves: tdf#104011 add a default CellRange argument in dialog editor

It will be available in 7.5.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 31 Commit Notification 2023-04-19 11:53:01 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8550aff56cec3fbe3a4b8c753d6869d0ad94f702

Resolves: tdf#104011 add a default CellRange argument in dialog editor

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 32 Caolán McNamara 2023-04-19 11:57:00 UTC
doesn't crash for me with that in place.