Resolves: tdf#104011 add a default CellRange argument in dialog editor

so the form combo box can be added without exception, likely either a problem
from:

commit 9cff030fa15f89fa1009fbb3827ab11c43c20b04
Date:   Mon Dec 5 09:56:17 2011 +0000

    add some form control support for basic dialogs

or:

commit c0d6bc75b223e9e477ef3669f7dc4abec703ecf6
Date:   Fri Jun 5 14:52:44 2015 +0100

    Resolves: tdf#90361 CellValueBinding/CellRangeListSource need WithArguments

Change-Id: I80e670840195a6725a9fdedc024f9763ad12ffe7
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150568
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>